--- a/src/components/ui/app-header/app-header.module.css
+++ b/src/components/ui/app-header/app-header.module.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   background-color: var(--background);
 }
 .menu {
@@ -21,6 +21,46 @@
 }
 
 .link_active {
+  color: var(--text-primary-color);
+}
+
+.link_position_last {
+  display: flex;
+  justify-content: flex-end;
+  flex-basis: 35%;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+} */
+.header {
+  background-color: var(--background);
+}
+
+.menu {
+  display: flex;
+  align-items: center;
+  max-width: 1240px;
+  height: 56px;
+  margin: 0 auto;
+}
+
+.menu_part_left {
+  display: flex;
+  flex-basis: 35%;
+}
+
+.link {
+  display: flex;
+  text-decoration: none;
+  color: var(--text-inactive-color);
+}
+
+.link_active {
+  display: flex;
+  text-decoration: none;
   color: var(--text-primary-color);
 }
 
